--- a/10-findable.tex
+++ b/10-findable.tex
@@ -143,42 +143,29 @@ relevant preprints, before cataloging what you have. That way you can have time 
 anticipate what can go where, and adapt if necessary before materials are published.
 
 This is particularly relevant when examining a typical research workflow. A
-researcher uses a particular set of data sources (Figure~\ref{workflow}A), such
+researcher uses a particular set of data sources (Figure~1A), such
 as model organisms, molecular systems, publicly available next-generation
 sequencing data, or other locally curated collections of information.
 Subsequently, data sources are treated with specialized protocols and tools in
-the lab (Figure~\ref{workflow}B) which help visualize, identify or extrapolate
-new observations about biological phenomena (Figure~\ref{workflow}C). After
+the lab (Figure~1B) which help visualize, identify or extrapolate
+new observations about biological phenomena (Figure~1C). After
 repetition, trends seen among noisy biological observations can be further
 analyzed, visualized, and statistically evaluated with software or code
-(Figure~\ref{workflow}D). Finally, the researcher builds context for the work by
-writing a manuscript and citing relevant literature (Figure~\ref{workflow}E).
+(Figure~1D). Finally, the researcher builds context for the work by
+writing a manuscript and citing relevant literature (Figure~1E).
 Manuscripts are revised by colleagues in the field through peer review
 and published in a peer reviewed journal.
-
-\begin{figure}
-  \includegraphics[width=\textwidth]{workflow.png}
-  \captionsetup{justification=centering}
-  \caption{A typical research workflow. A-E: Major steps of the research workflow.
-  F: An example set of citable repositories or tools used to find research products 
-  outside of journal articles. G: Persistent identifiers used
-  for the example repositories listed. DOI: Digital Object Identifier, RRID: Research
-  Resource Identifier, ROR: Research Organization Registry, ORCID: Open Researcher and 
-  Contributor ID. * Some institutions maintain their own repositories for archiving data
-  and may be available to researchers at a low or no cost}
-  \label{workflow}
-\end{figure}
 
 By planning ahead, you can identify what research products can go where, and
 update them if necessary before materials are published in a peer-reviewed
 journal or cited in a grant application. Advancements in best-practices
 for making research products more `FAIR' has led to the creation of an array
-of discipline specific, and general repositories\cite{PLOS2020} (Figure~\ref{workflow}F). 
+of discipline specific, and general repositories\cite{PLOS2020} (Figure~1F). 
 Researchers can archive and find research products created from each of the steps in the workflow.
 Many repositories now create Digital Object Identifiers (DOIs)\cite{DOI2020}, or
 other permanent identifiers for their submissions, making them citable and
 easily linked to the contributing researchers via Open Researcher and Contributor
-IDs (ORCIDs)\cite{ORCID2020} (Figure~\ref{workflow}G). Many repositories follow the standards
+IDs (ORCIDs)\cite{ORCID2020} (Figure~1G). Many repositories follow the standards
 set by experts in the field, reporting information that is recommended for
 reproducibility while employing necessary practices to protect the privacy of
 sensitive information.
@@ -188,7 +175,7 @@ ahead to be sure her research is accessible and reusable by her lab, students an
 collaborators. She works in a competitive field, so she also wants to maintain 
 some privacy with regard to works in progress. She takes advantage of some
 repositories and tools that help make her work easier to find for a variety of
-users (Figure~\ref{workflow}F). This way nearly all of her major research products can be citable and
+users (Figure~1F). This way nearly all of her major research products can be citable and
 are interlinked. The resulting network of citations aids findability greatly:
 
 \begin{itemize}
@@ -580,5 +567,27 @@ think about the place[s] you made and perhaps ultimately, how they think about
 you'' \cite{Covert2014}.
 
 \bibliography{10-findable}
+
+\section*{Figures}
+
+\subsection*{Figure~1: A typical research workflow.}
+
+\noindent
+A-E: Major steps of the research workflow.
+
+\noindent
+F: An example set of citable repositories or tools used to find research products 
+outside of journal articles.
+
+\noindent
+G: Persistent identifiers used for the example repositories listed.
+DOI: Digital Object Identifier,
+RRID: Research Resource Identifier,
+ROR: Research Organization Registry,
+ORCID: Open Researcher and Contributor ID.
+
+\noindent
+Some institutions maintain their own repositories for archiving data
+and may be available to researchers at a low or no cost
 
 \end{document}
