Prepping final version

--- a/10-findable.tex
+++ b/10-findable.tex
@@ -13,11 +13,11 @@
 \newline
 \\
 {Sarah~Lin}\textsuperscript{1,*},
-{Ibraheem~Ali}\textsuperscript{2}
+{Ibraheem~Ali}\textsuperscript{2},
 {Greg~Wilson}\textsuperscript{1}
 \\
-\textbf{1} RStudio, PBC
-\textbf{2} Louise M. Darling Biomedical Library, University of California, Los Angeles
+\textbf{1} RStudio, PBC, Boston, Massachusetts, USA \\
+\textbf{2} Louise M. Darling Biomedical Library, University of California, Los Angeles, California, USA
 \\
 \bigskip
 * sarah.lin@rstudio.com
@@ -143,16 +143,16 @@ relevant preprints, before cataloging what you have. That way you can have time 
 anticipate what can go where, and adapt if necessary before materials are published.
 
 This is particularly relevant when examining a typical research workflow. A
-researcher uses a particular set of data sources (Figure~1A), such
+researcher uses a particular set of data sources (Fig~1A), such
 as model organisms, molecular systems, publicly available next-generation
 sequencing data, or other locally curated collections of information.
 Subsequently, data sources are treated with specialized protocols and tools in
-the lab (Figure~1B) which help visualize, identify or extrapolate
-new observations about biological phenomena (Figure~1C). After
+the lab (Fig~1B) which help visualize, identify or extrapolate
+new observations about biological phenomena (Fig~1C). After
 repetition, trends seen among noisy biological observations can be further
 analyzed, visualized, and statistically evaluated with software or code
-(Figure~1D). Finally, the researcher builds context for the work by
-writing a manuscript and citing relevant literature (Figure~1E).
+(Fig~1D). Finally, the researcher builds context for the work by
+writing a manuscript and citing relevant literature (Fig~1E).
 Manuscripts are revised by colleagues in the field through peer review
 and published in a peer reviewed journal.
 
@@ -160,12 +160,12 @@ By planning ahead, you can identify what research products can go where, and
 update them if necessary before materials are published in a peer-reviewed
 journal or cited in a grant application. Advancements in best-practices
 for making research products more `FAIR' has led to the creation of an array
-of discipline specific, and general repositories\cite{PLOS2020} (Figure~1F). 
+of discipline specific, and general repositories\cite{PLOS2020} (Fig~1F). 
 Researchers can archive and find research products created from each of the steps in the workflow.
 Many repositories now create Digital Object Identifiers (DOIs)\cite{DOI2020}, or
 other permanent identifiers for their submissions, making them citable and
 easily linked to the contributing researchers via Open Researcher and Contributor
-IDs (ORCIDs)\cite{ORCID2020} (Figure~1G). Many repositories follow the standards
+IDs (ORCIDs)\cite{ORCID2020} (Fig~1G). Many repositories follow the standards
 set by experts in the field, reporting information that is recommended for
 reproducibility while employing necessary practices to protect the privacy of
 sensitive information.
@@ -175,7 +175,7 @@ ahead to be sure her research is accessible and reusable by her lab, students an
 collaborators. She works in a competitive field, so she also wants to maintain 
 some privacy with regard to works in progress. She takes advantage of some
 repositories and tools that help make her work easier to find for a variety of
-users (Figure~1F). This way nearly all of her major research products can be citable and
+users (Fig~1F). This way nearly all of her major research products can be citable and
 are interlinked. The resulting network of citations aids findability greatly:
 
 \begin{itemize}
@@ -566,25 +566,158 @@ you choose, the ``ways you enforce your way of doing things changes how users
 think about the place[s] you made and perhaps ultimately, how they think about
 you'' \cite{Covert2014}.
 
-\bibliography{10-findable}
+% \bibliography{10-findable}
+\begin{thebibliography}{10}
+
+\bibitem{Rosenfeld2015}
+Rosenfeld L, Morville P, Arango J.
+\newblock Information Architecture.
+\newblock O'Reilly Media Inc.; 2015.
+
+\bibitem{Hedden2016}
+Hedden H.
+\newblock The Accidental Taxonomist.
+\newblock Information Today; 2016.
+
+\bibitem{Wilkinson2016}
+Wilkinson MD.
+\newblock The FAIR Guiding Principles for scientific data management and
+  stewardship.
+\newblock Scientific Data. 2016;3:160018.
+
+\bibitem{Covert2014}
+Covert A.
+\newblock How to Make Sense of Any Mess.
+\newblock CreateSpace Independent Publishing Platform; 2014.
+
+\bibitem{Borges2000}
+Borges J.
+\newblock Selected Non-Fictions.
+\newblock Penguin; 2000.
+
+\bibitem{PLOS2020}
+{PLOS ONE}. Recommended Repositories; 2020.
+\newblock https://journals.plos.org/plosone/s/recommended-repositories.
+
+\bibitem{DOI2020}
+DOI. doi.org; 2020.
+\newblock \url{https://doi.org/}.
+
+\bibitem{ORCID2020}
+ORCID. orcid.org; 2020.
+\newblock \url{https://orcid.org/}.
+
+\bibitem{DRYAD2020}
+{DRYAD}. datadryad.org; 2020.
+\newblock https://datadryad.org/stash.
+
+\bibitem{Teytelman2016}
+Teytelman L, Stoliartchouk A, Kindler L, Hurwitz BL.
+\newblock Protocols.io: Virtual Communities for Protocol Development and
+  Discussion.
+\newblock PLoS Biology. 2016;14(8).
+\newblock doi:{10.1371/journal.pbio.1002538}.
+
+\bibitem{ZENODO2020}
+ZENODO. zenodo.org; 2020.
+\newblock \url{https://zenodo.org/}.
+
+\bibitem{bioRxiv2020}
+{bioRxiv}. biorxiv.org; 2020.
+\newblock \url{https://www.biorxiv.org/}.
+
+\bibitem{PREreview2020}
+{PREreview}. v2.PREreview.org; 2020.
+\newblock \url{https://v2.prereview.org/}.
+
+\bibitem{Briney2015}
+Briney K.
+\newblock Data Management for Researchers.
+\newblock Pelagic Publishing; 2015.
+
+\bibitem{Krug2014}
+Krug S.
+\newblock Don't Make Me Think, Revisited.
+\newblock New Riders; 2014.
+
+\bibitem{Pudding}
+{The Pudding}. Data sets created for stores on {The Pudding}; 2020.
+\newblock https://github.com/the-pudding/data.
+
+\bibitem{Bates2002}
+Bates MJ.
+\newblock Toward an integrated model of information seeking and searching.
+\newblock New Review of Information Behaviour Research. 2002;3:1--15.
+
+\bibitem{Arango2018}
+Arango J.
+\newblock Living in Information.
+\newblock Two Waves Books; 2018.
+
+\bibitem{Xie2017}
+Xie Y, Thomas A, Hill AP.
+\newblock {blogdown}: Creating Websites with R~Markdown.
+\newblock Chapman and Hall/CRC; 2017.
+
+\bibitem{Williams2015}
+Williams B, Damstra D, Stern H.
+\newblock Professional WordPress: Design and Development.
+\newblock 3rd ed. Wrox; 2015.
+
+\bibitem{NNG2020}
+Group NN. UX research and consulting firm; 2020.
+\newblock \url{https://www.nngroup.com/}.
+
+\bibitem{Wilson2014}
+Wilson G, Aruliah DA, Brown CT, Hong NPC, Davis M, Guy RT, et~al.
+\newblock Best Practices for Scientific Computing.
+\newblock {PLoS Biology}. 2014;12(1).
+\newblock doi:{10.1371/journal.pbio.1001745}.
+
+\bibitem{Wilson2017}
+Wilson G, Bryan J, Cranston K, Kitzes J, Nederbragt L, Teal TK.
+\newblock Good Enough Practices in Scientific Computing.
+\newblock {PLoS} Computational Biology. 2017;13(6):1--20.
+\newblock doi:{10.1371/journal.pcbi.1005510}.
+
+\bibitem{FAIR2020}
+FAIRsharing. FAIRsharing.org; 2020.
+\newblock \url{https://fairsharing.org/}.
+
+\bibitem{NCI2020}
+Institute NC. {NCI} Thesaurus; 2020.
+\newblock \url{https://ncit.nci.nih.gov/ncitbrowser/}.
+
+\bibitem{ASI2020}
+{American Society of Indexers}. Online Thesauri and Authority Files; 2020.
+\newblock
+  \url{https://www.asindexing.org/about-indexing/thesauri/online-thesauri-and-authority-files/}.
+
+\bibitem{Joudrey2015}
+Joudrey DN, Taylor AG, Miller DP.
+\newblock Introduction to Cataloging and Classification.
+\newblock Libraries Unlimited; 2015.
+
+\end{thebibliography}
 
 \section*{Figures}
 
-\subsection*{Figure~1: A typical research workflow.}
+\subsection*{Fig~1: A typical research workflow.}
 
-\noindent
-A-E: Major steps of the research workflow.
+\begin{itemize}
 
-\noindent
-F: An example set of citable repositories or tools used to find research products 
+\item A-E: Major steps of the research workflow.
+
+\item F: An example set of citable repositories or tools used to find research products 
 outside of journal articles.
 
-\noindent
-G: Persistent identifiers used for the example repositories listed.
-DOI: Digital Object Identifier,
-RRID: Research Resource Identifier,
-ROR: Research Organization Registry,
-ORCID: Open Researcher and Contributor ID.
+\item G: Persistent identifiers used for the example repositories listed.\\
+DOI: Digital Object Identifier\\
+RRID: Research Resource Identifier\\
+ROR: Research Organization Registry\\
+ORCID: Open Researcher and Contributor ID
+
+\end{itemize}
 
 \noindent
 Some institutions maintain their own repositories for archiving data
