United States of America

--- a/10-findable.tex
+++ b/10-findable.tex
@@ -16,8 +16,8 @@
 {Ibraheem~Ali}\textsuperscript{2},
 {Greg~Wilson}\textsuperscript{1}
 \\
-\textbf{1} RStudio, PBC, Boston, Massachusetts, USA \\
-\textbf{2} Louise M. Darling Biomedical Library, University of California, Los Angeles, California, USA
+\textbf{1} RStudio, PBC, Boston, Massachusetts, United States of America \\
+\textbf{2} Louise M. Darling Biomedical Library, University of California, Los Angeles, California, United States of America
 \\
 \bigskip
 * sarah.lin@rstudio.com
